--- a/QO/Hidrocarbonetos/HidrocarbonetosI.org
+++ b/QO/Hidrocarbonetos/HidrocarbonetosI.org
@@ -17,28 +17,37 @@
 
 ** Frações Típicas do Petróleo
 
+#+begin_export latex
+{\centering \small
+\begin{tblr}{
+		colspec = {rccc}, colsep = 2mm, hlines = {2pt, white},
+		row{odd} = {brown8}, row{even} = {gray8},
+		row{1} = {2em,azure2,fg=white,font=\bfseries\sffamily},
+		%row{2-Z} = {3em,font=\large},
+	}
+%	\hline
+	 Fração   &  {Temperatura \\ Ebulição (°C)}   &  {Composição \\  aproximada}  &  Usos \\
+%	\hline
+	Gás residual & - &  \ch{C1-C2} & gás combustível\\
+	\hline
+	{Gás liquefeito \\ de petróleo - GLP} & Até 40 &  \ch{C3-C4}  & gás para uso doméstico e indrustrial\\
+	\hline
+	Gasolina & 40-175 & \ch{C5-C10} & automóveis, solvente\\
+	\hline
+	Querosene & 175-235 & \ch{C11-C12} & iluminação, combustível aviões\\
+	\hline
+	Gasoléo leve & 235-305 & \ch{C13-C17} & diesel, fornos\\
+	\hline
+	Gasoléo pesado & 305-400 & \ch{C18-C25} & combustível, lubrificantes\\
+	\hline
+	Lubrificantes & 400-510 & \ch{C26-C38} & óleos librificantes\\
+	\hline
+	Resíduo & Acima de 510 & \ch{C38-} & asfalto, piche, impermeabilizantes \\
+	\hline
+\end{tblr}
+}
 
-#+ATTR_LATEX: :center nil :environment tabular :align |B|B|B|L|
-|------------------------------------------------------+-------------------------------------------------------------------+--------------------------------------------------------------------+----------------------------------------------------------|
-| @@latex: \cellcolor{green!20} {\bfseries Fração}  @@ | @@latex: \cellcolor{green!20} {\bfseries T. de Ebulição (°C)}  @@ | @@latex: \cellcolor{green!20} {\bfseries Composição aproximada} @@ | @@latex: \cellcolor{green!20} {\bfseries Usos} @@        |
-|------------------------------------------------------+-------------------------------------------------------------------+--------------------------------------------------------------------+----------------------------------------------------------|
-| Gás residual                                         |                                                                 - | @@latex: \ch{C1-C2}@@                                              | gás combustível                                          |
-|------------------------------------------------------+-------------------------------------------------------------------+--------------------------------------------------------------------+----------------------------------------------------------|
-| Gás liquefeito de petróleo - GLP                     |                                                            Até 40 | @@latex: \ch{C3-C4} @@                                             | gás combustível engarrafado, uso doméstico e indrustrial |
-|------------------------------------------------------+-------------------------------------------------------------------+--------------------------------------------------------------------+----------------------------------------------------------|
-| Gasolina                                             |                                                            40-175 | \ch{C5-C10}                                                        | combustível de automóveis, solvente                      |
-|------------------------------------------------------+-------------------------------------------------------------------+--------------------------------------------------------------------+----------------------------------------------------------|
-| Querosene                                            |                                                           175-235 | \ch{C11-C12}                                                       | iluminação, combustível de aviões a jato                 |
-|------------------------------------------------------+-------------------------------------------------------------------+--------------------------------------------------------------------+----------------------------------------------------------|
-| Gasoléo leve                                         |                                                           235-305 | \ch{C13-C17}                                                       | diesel, fornos                                           |
-|------------------------------------------------------+-------------------------------------------------------------------+--------------------------------------------------------------------+----------------------------------------------------------|
-| Gasoléo pesado                                       |                                                           305-400 | \ch{C18-C25}                                                       | combustível, matéria-prima para lubrificantes            |
-|------------------------------------------------------+-------------------------------------------------------------------+--------------------------------------------------------------------+----------------------------------------------------------|
-| Lubrificantes                                        |                                                           400-510 | \ch{C26-C38}                                                       | óleos librificantes                                      |
-|------------------------------------------------------+-------------------------------------------------------------------+--------------------------------------------------------------------+----------------------------------------------------------|
-| Resíduo                                              |                                                      Acima de 510 | \ch{C38-}                                                          | asfalto, piche, impermeabilizantes                       |
-|------------------------------------------------------+-------------------------------------------------------------------+--------------------------------------------------------------------+----------------------------------------------------------|
-
+#+end_export
 
 * Classificação
 
@@ -52,28 +61,39 @@
 :PROPERTIES:
 :BEAMER_opt: allowframebreaks
 :END:
-  
-   
-#+NAME: tabhibro
-#+CAPTION: Subdivisões importantes dos hidrocarbonetos
-#+ATTR_LATEX: :center nil :environment supertabular :align BBLB
-|---------------------------------------------------------+-------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------+------------------------------------------------------------|
-| @@latex:   \cellcolor{green!20} {\bfseries Subgrupo} @@ | @@latex: \cellcolor{green!20} {\bfseries Característica} @@ | @@latex: \cellcolor{green!20} {\bfseries Exemplos} @@                                                         | @@latex: \cellcolor{green!20} {\bfseries Fórmula geral} @@ |
-|---------------------------------------------------------+-------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------+------------------------------------------------------------|
-| Alcanos ou parafinas                                    | Cadeia aberta Ligações simples                              | \chemfig{H_3C-CH_2-CH_2-CH_3} \quad \chemfig{H_3C-C([:90]-CH_3)([:-90]-CH_3)-CH_2-CH([:-90]-CH_3)-CH_3}\qquad | \(\rm C_nH_{2n+2}\)                                        |
-|---------------------------------------------------------+-------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------+------------------------------------------------------------|
-| Alcenos, alquenos ou olefinas                           | Cadeia aberta com 1 ligação dupla                           | \chemfig{H_2C=CH-CH_2-CH_3} \quad \chemfig{H_3C-C([:90]-CH_3)=CH-CH_3}                                        | \(\rm C_nH_{2n}\)                                          |
-|---------------------------------------------------------+-------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------+------------------------------------------------------------|
-| Alcinos ou alquinos                                     | Cadeia aberta 1 ligação tripla                              | \chemfig{HC~C-CH_2-CH_3} \quad \chemfig{H_3C-C([:90]-CH_3)([:-90]-CH_3)-CH_2-C~C-CH_3}                        | \(\rm C_nH_{2n-2}\)                                       |
-|---------------------------------------------------------+-------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------+------------------------------------------------------------|
-| Alcadienos ou dienos                                    | Cadeia aberta 2 ligações duplas                             | \chemfig{H_2C=C=CH_2}\qquad \chemfig{H_2C=CH-CH=CH_2}                                                         | \(\rm C_nH_{2n-2}\)                                        |
-|---------------------------------------------------------+-------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------+------------------------------------------------------------|
-| Ciclanos                                                | Cadeia fechada Ligações simples                             | \chemfig{*5(-----)} \qquad \chemfig{*6(------)}                                                               | \(\rm C_nH_{2n}\)                                          |
-|---------------------------------------------------------+-------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------+------------------------------------------------------------|
-| Ciclenos                                                | Cadeia fechada uma ligação dupla                            | \chemfig{*4(---(-)=)} \qquad \chemfig{*6(-----=)}                                                             | \(\rm C_nH_{2n-2}\)                                        |
-|---------------------------------------------------------+-------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------+------------------------------------------------------------|
-| Aromáticos                                              | Contêm anel benzênico                                       | \chemfig{**6(-----(-CH_3)-)} \qquad  \chemfig{*6(-=-(*6(-=-=---))=-=)}                                          | \(\rm C_nH_{2n-6} \)                                       |
-|---------------------------------------------------------+-------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------+------------------------------------------------------------|
+#+begin_export latex
+	
+	\begin{longtblr}[
+%		theme = fancy,
+		caption = {Subdivisões importantes dos hidrocarbonetos},
+		entry = {Short Caption},
+		label = {tblr:test},
+		]{
+		colspec = {cccc}, colsep = 2mm, hlines = {2pt, white},
+		rowsep = 3.5pt, %% space line 
+		row{1} = {2em,purple7,fg=white,font=\bfseries\sffamily},
+		 }
+\hline
+Subgrupo  & Característica  & Exemplos  & Fórmula geral \\
+\hline
+{Alcanos\\ ou parafinas} & {Cadeia aberta \\ Ligações simples} & {\chemfig{H_3C-CH_2-CH_3} \\  \chemfig{H_3C-C([:90]-CH_3)([:-90]-CH_3)-CH([:-90]-CH_3)-CH_3}} &  \(\mathrm{C_nH_{2n+2}}\) \\
+ \hline
+ {Alcenos,  \\ alquenos \\ ou olefinas} & {Cadeia aberta com \\ 1 ligação dupla} & {\chemfig{H_2C=CH-CH_2-CH_3} \\ \chemfig{H_3C-C([:90]-CH_3)=CH-CH_3}} & \(\mathrm{C_nH_{2n}}\)\\
+ \hline \pagebreak
+ {Alcinos \\ ou alquinos} & {Cadeia aberta \\ 1 ligação tripla} & {\chemfig{HC~C-CH_3} \\ \chemfig{H_3C-C([:90]-CH_3)([:-90]-CH_3)-C~C-CH_3}} & \(\mathrm{ C_nH_{2n-2}}\)\\ 
+ \hline
+ {Alcadienos \\ ou dienos} & {Cadeia aberta \\ 2 ligações duplas} & {\chemfig{H_2C=C=CH_2} \\[1pt] \chemfig{H_2C=CH-CH=CH_2}} & \(\mathrm{C_nH_{2n-2}}\)\\
+ \hline \pagebreak
+ Ciclanos & {Cadeia fechada \\ Ligações simples} & {\chemfig{*6(------)}} & \(\mathrm{C_nH_{2n}}\)\\
+ \hline 
+ Ciclenos & { Cadeia fechada \\  uma ligação dupla} & {  \chemfig{*6(-----=)}} & \(\mathrm{C_nH_{2n-2}}\)\\
+ \hline \pagebreak
+ Aromáticos & Contêm anel benzênico & {\chemfig{**6(-----(-CH_3)-)} \\   \chemfig{*6(-=-(*6(-=-=---))=-=)}} & \(\mathrm{C_nH_{2n-6}}\)\\
+ \hline 
+\end{longtblr}
+#+end_export
+
+
 
 * Nomenclatura
 ** Nomenclatura dos compostos orgânicos
