--- a/extra.org
+++ b/extra.org
@@ -109,3 +109,26 @@ https://tex.stackexchange.com/questions/135904/how-to-annotate-this-chemical-sch
 #+end_export
 
 #+end_comment
+
+
+
+   
+#+NAME: tabhibro
+#+CAPTION: Subdivisões importantes dos hidrocarbonetos
+#+ATTR_LATEX: :center nil :environment supertabular :align BBLB
+|---------------------------------------------------------+-------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------+------------------------------------------------------------|
+| @@latex:   \cellcolor{green!20} {\bfseries Subgrupo} @@ | @@latex: \cellcolor{green!20} {\bfseries Característica} @@ | @@latex: \cellcolor{green!20} {\bfseries Exemplos} @@                                                         | @@latex: \cellcolor{green!20} {\bfseries Fórmula geral} @@ |
+|---------------------------------------------------------+-------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------+------------------------------------------------------------|
+| {Alcanos \\ ou parafinas}                               | Cadeia aberta Ligações simples                              | \chemfig{H_3C-CH_2-CH_2-CH_3} \quad \chemfig{H_3C-C([:90]-CH_3)([:-90]-CH_3)-CH_2-CH([:-90]-CH_3)-CH_3}\qquad | \(\rm C_nH_{2n+2}\)                                        |
+|---------------------------------------------------------+-------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------+------------------------------------------------------------|
+| Alcenos, alquenos ou olefinas                           | Cadeia aberta com 1 ligação dupla                           | \chemfig{H_2C=CH-CH_2-CH_3} \quad \chemfig{H_3C-C([:90]-CH_3)=CH-CH_3}                                        | \(\rm C_nH_{2n}\)                                          |
+|---------------------------------------------------------+-------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------+------------------------------------------------------------|
+| Alcinos ou alquinos                                     | Cadeia aberta 1 ligação tripla                              | \chemfig{HC~C-CH_2-CH_3} \quad \chemfig{H_3C-C([:90]-CH_3)([:-90]-CH_3)-CH_2-C~C-CH_3}                        | \(\rm C_nH_{2n-2}\)                                       |
+|---------------------------------------------------------+-------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------+------------------------------------------------------------|
+| Alcadienos ou dienos                                    | Cadeia aberta 2 ligações duplas                             | \chemfig{H_2C=C=CH_2}\qquad \chemfig{H_2C=CH-CH=CH_2}                                                         | \(\rm C_nH_{2n-2}\)                                        |
+|---------------------------------------------------------+-------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------+------------------------------------------------------------|
+| Ciclanos                                                | Cadeia fechada Ligações simples                             | \chemfig{*5(-----)} \qquad \chemfig{*6(------)}                                                               | \(\rm C_nH_{2n}\)                                          |
+|---------------------------------------------------------+-------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------+------------------------------------------------------------|
+| Ciclenos                                                | Cadeia fechada uma ligação dupla                            | \chemfig{*4(---(-)=)} \qquad \chemfig{*6(-----=)}                                                             | \(\rm C_nH_{2n-2}\)                                        |
+|---------------------------------------------------------+-------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------+------------------------------------------------------------|
+| Aromáticos                                              | Contêm anel benzênico                                       | \chemfig{**6(-----(-CH_3)-)} \qquad  \chemfig{*6(-=-(*6(-=-=---))=-=)}                                          | \(\rm C_nH_{2n-6} \)                                       |
